[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://graphics/background2.png" type="Texture" id=2]
[ext_resource path="res://graphics/bubble.png" type="Texture" id=3]

[node name="GameOverMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 471.577
margin_top = 249.041
margin_right = 591.577
margin_bottom = 308.041
text = "You drowned :("
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 478.183
margin_top = 280.677
margin_right = 546.183
margin_bottom = 300.677
text = "Try again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fish1Spawn" type="Position2D" parent="."]
position = Vector2( 1032.53, 343.767 )

[node name="Fish2Spawn" type="Position2D" parent="."]
position = Vector2( -11.0497, 364.639 )

[node name="Background" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 515.583, 225.823 )
amount = 10
lifetime = 3.0
lifetime_randomness = 1.0
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 50.0
gravity = Vector2( 0, -100 )
scale_amount = 0.1
scale_amount_random = 1.0
color = Color( 0.619608, 0.678431, 1, 1 )
[connection signal="button_up" from="CanvasLayer/Button" to="." method="_on_Button_button_up"]
